--- a/hackathon/package.json
+++ b/hackathon/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@types/chart.js": "^4.0.1",
+    "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "next": "15.3.4",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^3.1.2"
@@ -19,10 +21,10 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/node-fetch": "^2.6.13",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
     "typescript": "^5"
-    
   }
 }
